// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UX visual regression > admin negocio mantiene layout principal 1`] = `
<DocumentFragment>
  <div
    class="panel glass-card anim-fade-in cuenta-panel admin-negocio-shell superficie-app superficie-app--negocio"
    data-admin-negocio="true"
  >
    <div
      class="admin-negocio-shell__header"
    >
      <div>
        <p
          class="eyebrow"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="docente"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 19h16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M8 17V7a4 4 0 1 1 8 0v10"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Panel estratégico
        </p>
        <h2>
          Panel de Negocio EvaluaPro
        </h2>
        <p
          class="admin-negocio-shell__lead"
        >
          Supervisa métricas comerciales, licencias y cobranza con una lectura más ejecutiva y controlada.
        </p>
        <p
          class="nota"
        >
          Usuario: 
          <b>
            Sin sesion
          </b>
           (-)
        </p>
      </div>
      <div
        class="badge"
      >
        Vista activa: Dashboard
      </div>
    </div>
    <div
      class="subpanel"
    >
      <p
        class="mensaje warning"
        role="status"
      >
        <span
          class="mensaje__icono"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="alerta"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 9v4"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M12 17h.01"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="3"
            />
            <path
              d="M10.3 4.3a2 2 0 0 1 3.4 0l7.4 12.8A2 2 0 0 1 19.4 20H4.6a2 2 0 0 1-1.7-3L10.3 4.3Z"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </span>
        <span
          class="mensaje__contenido"
        >
          Este panel requiere permisos comerciales. Ingresa con tu cuenta Google superadmin o asigna permisos comerciales a tu usuario.
        </span>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UX visual regression > alumno sin token mantiene layout de acceso 1`] = `
<DocumentFragment>
  <section
    class="card anim-entrada portal-alumno-shell superficie-app superficie-app--alumno"
  >
    <div
      class="cabecera"
    >
      <div
        class="portal-alumno-shell__intro"
      >
        <p
          class="eyebrow"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="alumno"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M4 21c1.5-4 5-6 8-6s6.5 2 8 6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Portal Alumno
        </p>
        <h1
          class="portal-alumno-shell__title"
        >
          Consulta clara de resultados y evidencias
        </h1>
        <p
          class="portal-alumno-shell__lead"
        >
          Accede a tus resultados, revisa tu folio y entiende el estado de cada evaluación sin fricción.
        </p>
      </div>
      <div
        class="cabecera__acciones"
      >
        <button
          class="chip chip-version"
          title="Abrir información de versión"
          type="button"
        >
          v0.0.0
        </button>
        <button
          aria-label="Tema: Auto (Oscuro)"
          class="boton secundario boton--tema"
          title="Cambiar tema (Auto / Claro / Oscuro)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icono"
            height="18"
            viewBox="0 0 24 24"
            width="18"
          >
            <path
              d="M12 4a8 8 0 1 0 0 16V4Z"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M12 4a8 8 0 0 1 0 16"
              fill="none"
              opacity="0.5"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
          <span
            class="boton--temaTexto"
          >
            Tema: Auto (Oscuro)
          </span>
        </button>
      </div>
    </div>
    <div
      class="auth-grid"
    >
      <div
        class="auth-hero auth-hero--alumno"
      >
        <p
          class="eyebrow"
        >
          Acceso
        </p>
        <h2>
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="alumno"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M4 21c1.5-4 5-6 8-6s6.5 2 8 6"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
           Consulta de resultados
        </h2>
        <p
          class="auth-subtitulo"
        >
          Ingresa con el codigo de acceso que te compartio tu docente y tu matricula.
        </p>
        <ul
          aria-label="Beneficios"
          class="auth-beneficios"
        >
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="ok"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Consulta rapida y segura.
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="pdf"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 3v4h4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8 13h8"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 17h5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             Descarga tu PDF cuando este disponible.
          </li>
          <li>
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
             Si no aparece, intenta recargar.
          </li>
        </ul>
        <div
          aria-hidden="true"
          class="portal-alumno-badges"
        >
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="ok"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9 12l2 2 4-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
             Verificado
          </span>
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="pdf"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7 3h7l3 3v15a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
                stroke="currentColor"
                stroke-width="2"
              />
              <path
                d="M14 3v4h4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M8 13h8"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 17h5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             PDF
          </span>
          <span
            class="portal-alumno-badge"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
             Historial
          </span>
        </div>
        <div
          aria-hidden="true"
          class="auth-hero-illustration"
        >
          <div
            class="auth-shield-glow"
          >
            <svg
              class="auth-shield-svg"
              fill="none"
              viewBox="0 0 120 120"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M60 12L96 28V64C96 88 60 108 60 108C60 108 24 88 24 64V28L60 12Z"
                fill="rgba(37, 99, 235, 0.12)"
                stroke="url(#shield-grad)"
                stroke-width="3"
              />
              <path
                d="M60 42L88 54L60 66L32 54L60 42Z"
                fill="url(#cap-grad)"
                stroke="#00d2ff"
                stroke-width="1.5"
              />
              <path
                d="M44 60V74C44 79 51 83 60 83C69 83 76 79 76 74V60"
                stroke="#00d2ff"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M84 56V72"
                stroke="#a78bfa"
                stroke-linecap="round"
                stroke-width="2"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="shield-grad"
                  x1="24"
                  x2="96"
                  y1="12"
                  y2="108"
                >
                  <stop
                    stop-color="#00d2ff"
                  />
                  <stop
                    offset="1"
                    stop-color="#8b5cf6"
                  />
                </lineargradient>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cap-grad"
                  x1="32"
                  x2="88"
                  y1="42"
                  y2="66"
                >
                  <stop
                    stop-color="#2563eb"
                  />
                  <stop
                    offset="1"
                    stop-color="#00d2ff"
                  />
                </lineargradient>
              </defs>
            </svg>
          </div>
        </div>
      </div>
      <div
        class="auth-form"
      >
        <label
          class="campo"
          for="campo-_r_0_"
        >
          <span
            class="campo__label"
          >
            Codigo de acceso
          </span>
          <input
            autocapitalize="characters"
            autocomplete="one-time-code"
            autocorrect="off"
            id="campo-_r_0_"
            inputmode="text"
            placeholder="ABC123"
            spellcheck="false"
            value=""
          />
        </label>
        <label
          class="campo"
          for="campo-_r_1_"
        >
          <span
            class="campo__label"
          >
            Matricula
          </span>
          <input
            autocapitalize="none"
            autocomplete="username"
            autocorrect="off"
            id="campo-_r_1_"
            inputmode="text"
            placeholder="2024-001"
            spellcheck="false"
            value=""
          />
        </label>
        <p
          class="nota"
        >
          Si no ves resultados tras ingresar, intenta "Recargar". Si el codigo expiro, solicita uno nuevo al docente.
        </p>
        <button
          class="boton boton--con-icono"
          disabled=""
          type="button"
        >
          <span
            class="boton__icono"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="entrar"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 7l1-4H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h10l-1-4"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12 12h9"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M18 9l3 3-3 3"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
          <span
            class="boton__texto"
          >
            Consultar
          </span>
        </button>
        <aside
          aria-label="Ayuda: Como consultar sin errores"
          class="panel helper-panel"
        >
          <div
            class="helper-panel__header"
          >
            <p
              class="eyebrow"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="info"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 17v-5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M12 8h.01"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="3"
                />
                <path
                  d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </svg>
               Guia rapida
            </p>
            <h3>
              Como consultar sin errores
            </h3>
            <p
              class="nota"
            >
              Sigue esta secuencia para evitar bloqueos por codigo o matricula.
            </p>
          </div>
          <ol
            class="helper-panel__pasos"
          >
            <li>
              <span
                aria-hidden="true"
                class="helper-panel__stepIndex"
              >
                01
              </span>
              <span>
                Usa el codigo de acceso mas reciente compartido por tu docente.
              </span>
            </li>
            <li>
              <span
                aria-hidden="true"
                class="helper-panel__stepIndex"
              >
                02
              </span>
              <span>
                Escribe tu matricula sin espacios y revisa que tenga el formato esperado.
              </span>
            </li>
            <li>
              <span
                aria-hidden="true"
                class="helper-panel__stepIndex"
              >
                03
              </span>
              <span>
                Si no hay resultados, pulsa Recargar antes de volver a ingresar.
              </span>
            </li>
          </ol>
          <div
            class="helper-panel__notas"
          >
            <p
              class="mensaje"
              role="status"
            >
              <span
                class="mensaje__icono"
              >
                <svg
                  aria-hidden="true"
                  class="icono"
                  data-icono="info"
                  fill="none"
                  height="18"
                  viewBox="0 0 24 24"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 17v-5"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-width="2"
                  />
                  <path
                    d="M12 8h.01"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-width="3"
                  />
                  <path
                    d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                    stroke="currentColor"
                    stroke-width="2"
                  />
                </svg>
              </span>
              <span
                class="mensaje__contenido"
              >
                Si necesitas aclarar una respuesta, abre el detalle del folio y usa “Solicitar revision de marcadas”.
              </span>
            </p>
          </div>
        </aside>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`UX visual regression > docente sin token mantiene layout de acceso 1`] = `
<DocumentFragment>
  <section
    class="auth-portal card anim-entrada superficie-app superficie-app--docente"
  >
    <header
      class="auth-portal__topbar"
    >
      <div
        class="auth-portal__brand"
      >
        <div
          class="auth-portal__logo"
        >
          <svg
            aria-hidden="true"
            class="icono"
            data-icono="docente"
            fill="none"
            height="18"
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 19h16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M8 17V7a4 4 0 1 1 8 0v10"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <div>
          <h1
            class="auth-portal__title"
          >
            Plataforma Docente
          </h1>
          <span
            class="auth-portal__subtitle"
          >
            EvaluaPro · Sistema Universitario
          </span>
        </div>
      </div>
      <div
        class="auth-portal__top-actions"
      >
        <button
          class="chip chip-version"
          title="Abrir información de versión"
          type="button"
        >
          v0.0.0
        </button>
        <button
          aria-label="Tema: Auto (Oscuro)"
          class="boton secundario boton--tema"
          title="Cambiar tema (Auto / Claro / Oscuro)"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icono"
            height="18"
            viewBox="0 0 24 24"
            width="18"
          >
            <path
              d="M12 4a8 8 0 1 0 0 16V4Z"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            />
            <path
              d="M12 4a8 8 0 0 1 0 16"
              fill="none"
              opacity="0.5"
              stroke="currentColor"
              stroke-width="2"
            />
          </svg>
          <span
            class="boton--temaTexto"
          >
            Tema: Auto (Oscuro)
          </span>
        </button>
      </div>
    </header>
    <div
      class="auth-grid auth-grid--docente"
    >
      <div
        class="auth-hero"
      >
        <div
          class="auth-hero__header"
        >
          <p
            class="eyebrow"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="docente"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 19h16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M8 17V7a4 4 0 1 1 8 0v10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
             Acceso docente
          </p>
          <h2>
            Gestión y Evaluación Académica
          </h2>
          <p
            class="auth-subtitulo"
          >
            Diseña evaluaciones estructuradas, automatiza la calificación con hojas OMR y gestiona tus cursos con total privacidad local.
          </p>
        </div>
        <div
          aria-hidden="true"
          class="auth-hero-illustration"
        >
          <div
            class="auth-shield-glow"
          >
            <svg
              class="auth-shield-svg"
              fill="none"
              viewBox="0 0 120 120"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M60 12L96 28V64C96 88 60 108 60 108C60 108 24 88 24 64V28L60 12Z"
                fill="rgba(37, 99, 235, 0.12)"
                stroke="url(#shield-grad-docente)"
                stroke-width="3"
              />
              <path
                d="M60 42L88 54L60 66L32 54L60 42Z"
                fill="url(#cap-grad-docente)"
                stroke="#00d2ff"
                stroke-width="1.5"
              />
              <path
                d="M44 60V74C44 79 51 83 60 83C69 83 76 79 76 74V60"
                stroke="#00d2ff"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M84 56V72"
                stroke="#a78bfa"
                stroke-linecap="round"
                stroke-width="2"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="shield-grad-docente"
                  x1="24"
                  x2="96"
                  y1="12"
                  y2="108"
                >
                  <stop
                    stop-color="#00d2ff"
                  />
                  <stop
                    offset="1"
                    stop-color="#8b5cf6"
                  />
                </lineargradient>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="cap-grad-docente"
                  x1="32"
                  x2="88"
                  y1="42"
                  y2="66"
                >
                  <stop
                    stop-color="#2563eb"
                  />
                  <stop
                    offset="1"
                    stop-color="#00d2ff"
                  />
                </lineargradient>
              </defs>
            </svg>
          </div>
        </div>
        <ul
          aria-label="Beneficios"
          class="auth-feature-list auth-beneficios"
        >
          <li
            class="auth-feature-card"
          >
            <div
              class="auth-feature-card__icon"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="banco"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 6a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v14H6a2 2 0 0 0-2 2V6Z"
                  stroke="currentColor"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M6 20h13"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M8 8h8M8 12h6"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="auth-feature-card__body"
            >
              <strong>
                Gestión de Cursos y Banco
              </strong>
              <p>
                Organiza materias, listas de alumnos y preguntas por competencias.
              </p>
            </div>
          </li>
          <li
            class="auth-feature-card"
          >
            <div
              class="auth-feature-card__icon"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="escaneo"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 3H5a2 2 0 0 0-2 2v2M17 3h2a2 2 0 0 1 2 2v2M7 21H5a2 2 0 0 1-2-2v-2M17 21h2a2 2 0 0 0 2-2v-2"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M8 12h8"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="auth-feature-card__body"
            >
              <strong>
                Calificación OMR Instantánea
              </strong>
              <p>
                Genera exámenes impresos y procesa hojas de respuestas ópticas al instante.
              </p>
            </div>
          </li>
          <li
            class="auth-feature-card"
          >
            <div
              class="auth-feature-card__icon"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="ok"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 12l2 2 4-5"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="auth-feature-card__body"
            >
              <strong>
                Privacidad y Datos Locales
              </strong>
              <p>
                Tus calificaciones se almacenan de forma segura en tu equipo sin dependencias externas.
              </p>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="auth-form auth-form--registrar"
      >
        <div
          class="auth-form-head"
        >
          <div
            class="acciones auth-tabs"
          >
            <button
              class="boton secundario auth-tab"
              type="button"
            >
              Ingresar
            </button>
            <button
              class="boton auth-tab auth-tab--activo"
              type="button"
            >
              Registrar
            </button>
          </div>
          <h3
            class="mt-12"
          >
            Registro docente y activación de licencia
          </h3>
          <p
            class="nota"
          >
            Crea tu cuenta institucional y establece tu clave de licencia para activar la plataforma.
          </p>
        </div>
        <div
          aria-label="Ayuda de registro"
          class="panel auth-panel"
        >
          <p
            class="nota"
          >
            Para registrar tu cuenta completa 
            <b>
              nombres
            </b>
            , 
            <b>
              apellidos
            </b>
             y 
            <b>
              correo
            </b>
            . La contraseña requiere mínimo 8 caracteres.
          </p>
        </div>
        <p
          class="mensaje"
          role="status"
        >
          <span
            class="mensaje__icono"
          >
            <svg
              aria-hidden="true"
              class="icono"
              data-icono="info"
              fill="none"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 17v-5"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
              <path
                d="M12 8h.01"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="3"
              />
              <path
                d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                stroke="currentColor"
                stroke-width="2"
              />
            </svg>
          </span>
          <span
            class="mensaje__contenido"
          >
            Inicio de sesión con Google deshabilitado en este entorno. Para habilitarlo en desarrollo, define VITE_GOOGLE_CLIENT_ID en el .env del root y reinicia Vite.
          </span>
        </p>
        <label
          class="campo auth-campo"
        >
          Nombres
          <input
            autocomplete="given-name"
            placeholder="Ej. Juan Carlos"
            value=""
          />
        </label>
        <label
          class="campo auth-campo"
        >
          Apellidos
          <input
            autocomplete="family-name"
            placeholder="Ej. Perez Lopez"
            value=""
          />
        </label>
        <label
          class="campo auth-campo"
        >
          Correo
          <input
            autocomplete="email"
            type="email"
            value=""
          />
        </label>
        <label
          class="campo auth-campo"
        >
          Clave o Código de Licencia (opcional / institucional)
          <input
            autocomplete="off"
            placeholder="Ej. LIC-2026-DOC-XXXX-XXXX"
            spellcheck="false"
            value=""
          />
          <span
            class="ayuda"
          >
            Si cuentas con una clave institucional, ingrésala para activar tu licencia docente de inmediato.
          </span>
        </label>
        <label
          class="campo auth-campo"
        >
          Contraseña
          <input
            autocomplete="new-password"
            type="password"
            value=""
          />
        </label>
        <div
          class="acciones auth-submit"
        >
          <button
            class="boton boton--lg boton--con-icono"
            disabled=""
            type="button"
          >
            <span
              class="boton__icono"
            >
              <svg
                aria-hidden="true"
                class="icono"
                data-icono="nuevo"
                fill="none"
                height="18"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 7v10"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M7 12h10"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M12 22a10 10 0 1 0 0-20 10 10 0 0 0 0 20Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </svg>
            </span>
            <span
              class="boton__texto"
            >
              Crear cuenta
            </span>
          </button>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
